final backend + recent frontend (terms and credit card)

--- a/Sprint 1/frontend/src/index.css
+++ b/Sprint 1/frontend/src/index.css
@@ -156,3 +156,10 @@ div button {
 .header-search{
   padding-right: 4rem;
 }
+.prom{
+  padding-right: 70rem;
+}
+.reject{
+  color: #000000;
+  background-color: #d51841;
+}
