--- a/Sprint 1/frontend/src/Components/Card.css
+++ b/Sprint 1/frontend/src/Components/Card.css
@@ -4,6 +4,7 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     border-radius: 6px;
     padding: 1rem;
+    padding-right: 60rem;
     overflow: hidden;
     background: rgb(255, 255, 255);
   }
